@@ -79,7 +79,6 @@ qmidinetOptionsForm::qmidinetOptionsForm (
 			m_ui.UdpAddrComboBox->setCurrentIndex(0);
 		else
 			m_ui.UdpAddrComboBox->setEditText(pOptions->sUdpAddr);
-		comboAddressTextChanged(m_ui.UdpAddrComboBox->currentText());
 		m_ui.UdpPortSpinBox->setValue(pOptions->iUdpPort);
 		m_ui.NumPortsSpinBox->setValue(pOptions->iNumPorts);
 		m_ui.AlsaMidiCheckBox->setChecked(pOptions->bAlsaMidi);
@@ -127,9 +126,6 @@ qmidinetOptionsForm::qmidinetOptionsForm (
 	QObject::connect(m_ui.DialogButtonBox,
 		SIGNAL(clicked(QAbstractButton *)),
 		SLOT(buttonClick(QAbstractButton *)));
-	QObject::connect(m_ui.UdpAddrComboBox,
-		SIGNAL(editTextChanged(const QString&)),
-		SLOT(comboAddressTextChanged(const QString&)));
 }
 
 
@@ -202,33 +198,19 @@ void qmidinetOptionsForm::buttonClick ( QAbstractButton *pButton )
 		= m_ui.DialogButtonBox->buttonRole(pButton);
 	if (buttonRole == QDialogButtonBox::ResetRole) {
 		m_ui.InterfaceComboBox->setCurrentIndex(0);
-		m_ui.UdpAddrComboBox->setCurrentIndex(0);
+	#if defined(CONFIG_IPV6)
+		const QString& sUdpAddr
+			= m_ui.UdpAddrComboBox->currentText();
+		QHostAddress addr;
+		if (addr.setAddress(sUdpAddr) &&
+			addr.protocol() == QAbstractSocket::IPv6Protocol)
+			m_ui.UdpAddrComboBox->setEditText(QMIDINET_UDP_IPV6_ADDR);
+		else
+	#endif
+			m_ui.UdpAddrComboBox->setEditText(QMIDINET_UDP_IPV4_ADDR);
 		m_ui.UdpPortSpinBox->setValue(QMIDINET_UDP_PORT);
 	}
 }
 
-void qmidinetOptionsForm::comboAddressTextChanged(const QString &text)
-{
-#if defined(CONFIG_IPV6)
-	QHostAddress addr;
-	if(addr.setAddress(text) && addr.isMulticast()) {
-		switch(addr.protocol()) {
-		case QAbstractSocket::IPv4Protocol:
-			m_ui.ProtocolLineEdit->setText("IPv4");
-			break;
-		case QAbstractSocket::IPv6Protocol:
-			m_ui.ProtocolLineEdit->setText("IPv6");
-			break;
-		default:
-			m_ui.ProtocolLineEdit->setText(tr("Invalid address"));
-			break;
-		}
-	} else {
-		m_ui.ProtocolLineEdit->setText(tr("Invalid address"));
-	}
-#else
-	m_ui.ProtocolLineEdit->setText("IPv4");
-#endif
-}
 
 // end of qmidinetOptionsForm.cpp
