@@ -4,6 +4,17 @@ QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
 ChangeLog
 
 
+GIT HEAD
+
+- Provide a default IPv6 address, and feedback to the user
+  in the options dialog (after a merge request by plcl aka.
+  Pedro López-Cabanillas, thanks). (EXPERIMENTAL)
+
+- When using ./configure --with-qt=... it is also necessary
+  to adjust the PKG_CONFIG_PATH environment variable (also
+  by plcl aka. Pedro López-Cabanillas). (EXPERIMENTAL)
+
+
 0.6.0  2019-10-17  An Autumn'19 Release.
 
 - Populate automatically the network interface combo-box
